Fixed bug #21267 (opening URLs that result in redirection to a relative path was failing).